# kandal

./: .env.example  .gitignore  CLAUDE.md  activity_log.md  demo.py  pyproject.toml  requirements.txt  test_kandal_e2e.py  test_profiling_live.py  test_profiling_sms.py  vercel.json
.claude/docs/: matching_algorithm_spec.md
api/: index.py
public/: index.html
src/kandal/api/: landing.py  legal.py  main.py
src/kandal/core/: alerts.py  config.py  supabase.py
src/kandal/matching/: __init__.py  candidates.py
src/kandal/models/: match.py  onboarding.py  preferences.py  profile.py
src/kandal/profiling/: __init__.py  basics.py  chat.py  embeddings.py  engine.py  extractor.py  memory.py  pool_stats.py  prompts.py  rescue.py  soul.md  spark_mcqs.py
src/kandal/questionnaire/: __init__.py  inference.py  questions.py
src/kandal/schemas/: auth.py  match.py  preferences.py  profile.py
src/kandal/scoring/: __init__.py  bazi.py  dealbreakers.py  engine.py  llm_judge.py  (+1 more)
supabase/migrations/: 00001_initial_schema.sql  00002_sms_onboarding.sql  00003_scalable_matching.sql  00004_bazi_and_preferences.sql  00005_emotional_fit.sql  00006_partner_preferences.sql  00007_kandal_memories.sql  00008_kandal_memory_embeddings.sql  00009_match_llm_verdict.sql  00010_lifestyle_basics.sql  00011_match_reveal.sql  00012_basics_index.sql  00013_spark_signals.sql  00014_spark_longterm_indices.sql
tests/: conftest.py  test_api.py  test_dealbreakers.py  test_match_respond.py  test_questionnaire.py  test_scoring.py  test_sms_onboarding.py  test_tier2_scoring.py  test_verdict.py
(+9 files in other folders)
